#00 프로젝트 기본 파일 업로드
1. 솔류선 파일
2. 세이브 파일 수정

--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1379,7 +1379,7 @@ WmfMediaSettings.Media=True
 WmfMediaSettings.Debug=True
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
