Main Title and UI

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
-EditorStartupMap=/Game/ThirdPerson/Maps/ThirdPersonMap.ThirdPersonMap
+GameDefaultMap=/Game/Maps/MainTitle.MainTitle
+EditorStartupMap=/Game/Maps/MainTitle.MainTitle
 GlobalDefaultGameMode="/Script/MyGame.MyGameGameMode"
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
@@ -16,6 +16,7 @@ r.GenerateMeshDistanceFields=True
 r.DynamicGlobalIlluminationMethod=1
 
 r.ReflectionMethod=1
+r.DiscardUnusedQuality=True
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
