--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,102 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=DECA0FE646824D17F189708C59D4FB96
-ProjectName=Third Person Game Template
+ProjectName=My Game
+ProjectVersion=0.0.0.1
+CompanyName=Mahanaim
+CompanyDistinguishedName=Mahanaim
+ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "FD644DB74727C8FF0089959463D8D3B9", "My Game")
+ProjectDebugTitleInfo=NSLOCTEXT("[/Script/EngineSettings]", "B4646AF04BCBB2BE2F62CC9DC6AF58B5", "My Game")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+Build=IfProjectHasCode
+BuildConfiguration=PPBC_Development
+BuildTarget=
+LaunchOnTarget=
+StagingDirectory=(Path="")
+FullRebuild=False
+ForDistribution=False
+IncludeDebugFiles=False
+BlueprintNativizationMethod=Disabled
+bIncludeNativizedAssetsInProjectGeneration=False
+bExcludeMonolithicEngineHeadersInNativizedCode=False
+UsePakFile=True
+bUseIoStore=True
+bUseZenStore=False
+bMakeBinaryConfig=True
+bGenerateChunks=False
+bGenerateNoChunks=False
+bChunkHardReferencesOnly=False
+bForceOneChunkPerFile=False
+MaxChunkSize=0
+bBuildHttpChunkInstallData=False
+HttpChunkInstallDataDirectory=(Path="")
+bCompressed=True
+PackageCompressionFormat=Oodle
+bForceUseProjectCompressionFormatIgnoreHardwareOverride=False
+PackageAdditionalCompressionOptions=
+PackageCompressionMethod=Kraken
+PackageCompressionLevel_DebugDevelopment=4
+PackageCompressionLevel_TestShipping=5
+PackageCompressionLevel_Distribution=7
+PackageCompressionMinBytesSaved=1024
+PackageCompressionMinPercentSaved=5
+bPackageCompressionEnableDDC=False
+PackageCompressionMinSizeToConsiderDDC=0
+HttpChunkInstallDataVersion=
+IncludePrerequisites=True
+IncludeAppLocalPrerequisites=False
+bShareMaterialShaderCode=True
+bDeterministicShaderCodeOrder=False
+bSharedMaterialNativeLibraries=True
+ApplocalPrerequisitesDirectory=(Path="")
+IncludeCrashReporter=False
+InternationalizationPreset=English
+-CulturesToStage=en
++CulturesToStage=en
+LocalizationTargetCatchAllChunkId=0
+bCookAll=False
+bCookMapsOnly=False
+bSkipEditorContent=False
+bSkipMovies=False
+-IniKeyBlacklist=KeyStorePassword
+-IniKeyBlacklist=KeyPassword
+-IniKeyBlacklist=rsa.privateexp
+-IniKeyBlacklist=rsa.modulus
+-IniKeyBlacklist=rsa.publicexp
+-IniKeyBlacklist=aes.key
+-IniKeyBlacklist=SigningPublicExponent
+-IniKeyBlacklist=SigningModulus
+-IniKeyBlacklist=SigningPrivateExponent
+-IniKeyBlacklist=EncryptionKey
+-IniKeyBlacklist=DevCenterUsername
+-IniKeyBlacklist=DevCenterPassword
+-IniKeyBlacklist=IOSTeamID
+-IniKeyBlacklist=SigningCertificate
+-IniKeyBlacklist=MobileProvision
+-IniKeyBlacklist=IniKeyBlacklist
+-IniKeyBlacklist=IniSectionBlacklist
++IniKeyBlacklist=KeyStorePassword
++IniKeyBlacklist=KeyPassword
++IniKeyBlacklist=rsa.privateexp
++IniKeyBlacklist=rsa.modulus
++IniKeyBlacklist=rsa.publicexp
++IniKeyBlacklist=aes.key
++IniKeyBlacklist=SigningPublicExponent
++IniKeyBlacklist=SigningModulus
++IniKeyBlacklist=SigningPrivateExponent
++IniKeyBlacklist=EncryptionKey
++IniKeyBlacklist=DevCenterUsername
++IniKeyBlacklist=DevCenterPassword
++IniKeyBlacklist=IOSTeamID
++IniKeyBlacklist=SigningCertificate
++IniKeyBlacklist=MobileProvision
++IniKeyBlacklist=IniKeyBlacklist
++IniKeyBlacklist=IniSectionBlacklist
+-IniSectionBlacklist=HordeStorageServers
++IniSectionBlacklist=HordeStorageServers
++MapsToCook=(FilePath="/Game/Maps/MainTitle")
++DirectoriesToAlwaysStageAsUFS=(Path="Asset/DataTable/CSV")
+PerPlatformBuildConfig=()
+PerPlatformTargetFlavorName=()
+PerPlatformBuildTarget=()
+
